--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/ui": "^3.4",
         "mpdf/mpdf": "*",
         "spatie/laravel-activitylog": "3.17",
-        "spatie/laravel-permission": "^5.7",
+        "spatie/laravel-permission": "*",
         "yajra/laravel-datatables": "*",
         "yajra/laravel-datatables-oracle": "*"
     },
